--- a/Tarea 1/PUNTOS_1_2_Y_3 (2).ipynb
+++ b/Tarea 1/PUNTOS_1_2_Y_3 (2).ipynb
@@ -563,7 +563,9 @@
         "\n",
         "f) Podemos ver en las graficas que en general la energia mecanica se conserva. Debidos a los errores del metodo de euler se logran ver algunas inconsistencias. Sin embargo, son tan pequeñas que podemos considerarlas despreciables.\n",
         "\n",
-        "g) El momento angular se conserva, lo que se puede verificar en la grafica. Las variaciones que se perciben son producto del error del metodo y la escalada del eje y.\n",
+        "g) El teorema trabajo energia dice que el trabajo realizado por una fuerza es igual a la diferencia de energia potencial final e inicial. Dicho teorema se cumple, pues debido a que la fuerza de contacto de conservativa, esta "devuelve" la energia que antes le habia quitado a la particula durante el choque. /n",
+        "\n",
+        "h)El momento angular se conserva, lo que se puede verificar en la grafica. Las variaciones que se perciben son producto del error del metodo y la escalada del eje y.\n"
         "\n",
         "i) Si este sistema que se mueve en 2D se extendiera a 3D y no se dota a las particulas de un momento en el eje z, estas se moveran solo en el plano x,y."
       ],
